version/stable/_sources/api/ansys/mechanical/stubs/v242/Ansys/Mechanical/DataModel/Enums/WeightingType.rst.txt
.. vale off



:class:`WeightingType`
======================

.. py:class:: ansys.mechanical.stubs.v242.Ansys.Mechanical.DataModel.Enums.WeightingType(*args, **kwds)

   Bases: :py:obj:`enum.Enum`


   
   Create a collection of name/value pairs.

   Example enumeration:

   >>> class Color(Enum):
   ...     RED = 1
   ...     BLUE = 2
   ...     GREEN = 3

   Access them by:

   - attribute access:

     >>> Color.RED
     <Color.RED: 1>

   - value lookup:

     >>> Color(1)
     <Color.RED: 1>

   - name lookup:

     >>> Color['RED']
     <Color.RED: 1>

   Enumerations can be iterated over, and know how many members they have:

   >>> len(Color)
   3

   >>> list(Color)
   [<Color.RED: 1>, <Color.BLUE: 2>, <Color.GREEN: 3>]

   Methods can be added to enumerations, and members can have their own
   attributes -- see the documentation for details.















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: WeightingType

Overview
--------

.. tab-set::





   .. tab-item:: Attributes

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Assignment`
            - 
          * - :py:attr:`~ClosestPoint`
            - 
          * - :py:attr:`~KrigingFunction`
            - 
          * - :py:attr:`~Quaternion`
            - 
          * - :py:attr:`~RadialBasisFunctions`
            - 
          * - :py:attr:`~ShapeFunctions`
            - 
          * - :py:attr:`~Triangulation`
            - 
          * - :py:attr:`~UVMapping`
            - 
          * - :py:attr:`~VolumeFraction`
            - 
          * - :py:attr:`~WeightUndefined`
            - 
          * - :py:attr:`~WeightedAverage`
            - 








Attribute detail
----------------
.. py:attribute:: Assignment
   :value: 9


.. py:attribute:: ClosestPoint
   :value: 2


.. py:attribute:: KrigingFunction
   :value: 6


.. py:attribute:: Quaternion
   :value: 10


.. py:attribute:: RadialBasisFunctions
   :value: 1


.. py:attribute:: ShapeFunctions
   :value: 3


.. py:attribute:: Triangulation
   :value: 4


.. py:attribute:: UVMapping
   :value: 7


.. py:attribute:: VolumeFraction
   :value: 8


.. py:attribute:: WeightUndefined
   :value: 0


.. py:attribute:: WeightedAverage
   :value: 5






.. vale on